<resources>
    <string name="app_name">ExAvaliativo2 DMOS5</string>
    <string name="new_diary">Adicionar nova tarefa</string>
    <string name="edit_title_diary">Escreva o titulo do diario</string>
    <string name="text_date">DATA</string>
    <string name="text_title">TITULO</string>
    <string name="text_time">HORARIO</string>
    <string name="text_desc">DESCRIÇÃO</string>
    <string name="hint_desc">Escreva uma descrição</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="insert_sucess">Inserido com sucesso</string>
    <string name="insert_failure">Falha na inserção</string>
    <string name="remove_sucess">Remoção efetuada com sucesso</string>
    <string name="remove_failure">Falha na remoção</string>
</resources>