<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.diary.JouralActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_diary"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/text_date"
        app:layout_constraintTop_toBottomOf="@id/edit_text_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="01/01/2000"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/text_date"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/img_calendar"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:src="@drawable/ic_calendar"
        app:layout_constraintStart_toEndOf="@id/edit_text_date"
        app:layout_constraintTop_toTopOf="@id/edit_text_date"
        app:layout_constraintBottom_toBottomOf="@id/edit_text_date"/>

    <TextView
        android:id="@+id/text_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_time"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="@id/text_date"
        app:layout_constraintStart_toEndOf="@id/img_calendar"/>

    <EditText
        android:id="@+id/edit_text_hour"
        android:layout_width="200px"
        android:layout_height="wrap_content"
        android:hint="10:10"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/text_hour"
        app:layout_constraintStart_toStartOf="@id/text_hour"/>

    <ImageView
        android:id="@+id/img_clock"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:src="@drawable/ic_clock"
        app:layout_constraintStart_toEndOf="@id/edit_text_hour"
        app:layout_constraintTop_toTopOf="@id/edit_text_hour"
        app:layout_constraintBottom_toBottomOf="@id/edit_text_hour"/>

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/text_desc"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_date"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textfield_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollHorizontally="false"
        android:layout_marginVertical="5dp"
        android:hint="@string/hint_desc"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/btn_save"
        app:layout_constraintTop_toBottomOf="@id/text_description"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_confirm"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>